--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+
 body{
     font-family: Myriad Pro Regular;
 }
@@ -234,7 +236,7 @@ line-height: 26px;
 line-height: 26px;
 font-size: 12px;
  }
- /* Слайдер */
+ /* пїЅпїЅпїЅпїЅпїЅпїЅпїЅ */
 .slides {
     height:400px;
     margin:auto;
@@ -247,7 +249,7 @@ font-size: 12px;
     position:relative;
 }
 
-/* Кадры анимации #anim_slides */
+/* пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ #anim_slides */
 @-webkit-keyframes anim_slides {
     0% {
         opacity:0;
@@ -288,7 +290,7 @@ font-size: 12px;
     position:absolute;
     top:0;
 
-    /* анимация css3 */
+    /* пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ css3 */
     -webkit-animation-name: anim_slides;
     -webkit-animation-duration: 24.0s;
     -webkit-animation-timing-function: linear;
@@ -308,7 +310,7 @@ font-size: 12px;
     -moz-animation-fill-mode: forwards;
 }
 
-/* Задержки css3 */
+/* пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ css3 */
 .slides ul  li:nth-child(2), .slides ul  li:nth-child(2) div {
     -webkit-animation-delay: 6.0s;
     -moz-animation-delay: 6.0s;
@@ -325,7 +327,7 @@ font-size: 12px;
     display:block;
 }
 
-/* Кадры анимации #anim_titles */
+/* пїЅпїЅпїЅпїЅпїЅ пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ #anim_titles */
 @-webkit-keyframes anim_titles {
     0% {
         left:100%;
@@ -384,7 +386,7 @@ font-size: 12px;
     top:50%;
     width:200px;
 
-    /* Анимация css3 */
+    /* пїЅпїЅпїЅпїЅпїЅпїЅпїЅпїЅ css3 */
     -webkit-animation-name: anim_titles;
     -webkit-animation-duration: 24.0s;
     -webkit-animation-timing-function: linear;
